Bug 445542 - If Dolphin is open in another Activity, the vault opens in that Activity even if it's configured to only stay open in the current Activity, thus immediately locking it.
Summary: If Dolphin is open in another Activity, the vault opens in that Activity even...
Status: RESOLVED FIXED
Alias: None
Product: Plasma Vault
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-15 17:03 UTC by strangequark
Modified: 2021-11-16 08:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description strangequark 2021-11-15 17:03:03 UTC
SUMMARY
When the vault is mounted and opened, and if Dolphin was opened first in another Activity, the vault will try and open in the other activity. If it was configured to open only on one activity, it'll lock itself and fail to open.


STEPS TO REPRODUCE
1. Open Dolphin (or the default file manager) in a separate activity, without opening it in the current activity
2. Create a vault that is Activity-specific
3. Try to open and mount that vault

OBSERVED RESULT
The other Activity's Dolphin (or default file manager)) is opened, and it doesn't actually display the contents of your vault because the vault got locked.

EXPECTED RESULT
A new Dolphin (or default file manager) window should open in the current Activity, and the vault should open in that.

SOFTWARE/OS VERSIONSOperating System: KDE neon 5.23
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
none
Comment 1 Ivan Čukić 2021-11-16 08:58:21 UTC
Git commit 9626e0d94208c0135da4ca79f4fa39f42a16117a by Ivan Čukić.
Committed on 16/11/2021 at 08:57.
Pushed by ivan into branch 'ivan/open-new-dolphin-window'.

Request a new dolphin window when opening vaults

M  +22   -4    kded/service.cpp

https://invent.kde.org/plasma/plasma-vault/commit/9626e0d94208c0135da4ca79f4fa39f42a16117a