Request a new dolphin window when opening vaults

BUG:445542